--- a/Album.html
+++ b/Album.html
@@ -9,7 +9,7 @@
     <tr align="center">
       <td><img src="images/logobaru-removebg-preview.png" width="70px"></td>
       <td colspan="3"><h2>SELAMAT DATANG DI WEBSITE VALENTINO YUDHA</h2></td>
-      <td><img src="Images/WhatsApp Image 2025-09-30 at 12.41.43.jpeg" width="70px"></td>
+      <td><img src="images/WhatsApp Image 2025-09-30 at 12.41.43.jpeg" width="70px"></td>
     </tr>
     <tr align="center">
       <td><a href="index.html"><img src="images/vecteezy_home-icon-isolated-on-transparent-background-black-symbol_14391893.png" width="25px"><br>Beranda</a></td>
@@ -37,7 +37,7 @@
             </td>
     </tr>
     <tr>
-        <td align="center" valign="middle"><a href="Profil.html"><img src="Images/pngwing.com_-_Copy-removebg-preview.png" width="43px"></a></td>
+        <td align="center" valign="middle"><a href="Profil.html"><img src="images/pngwing.com_-_Copy-removebg-preview.png" width="43px"></a></td>
       <td colspan="3"><marquee behavior="scroll" direction="left" scrollamount="6">
           <img src="images/gambar-orang-melambai-removebg-preview.png" width="30px" valign="bottom"> Halo! Ini adalah Halaman Albumku (valentino-xsija2).
 </marquee></td>
@@ -46,4 +46,5 @@
   </table>
   </center>
 </body>
+
 </html>
