--- a/Artikel.html
+++ b/Artikel.html
@@ -9,7 +9,7 @@
     <tr align="center">
       <td><img src="images/logobaru-removebg-preview.png" width="70px"></td>
       <td colspan="3"><h2>SELAMAT DATANG DI WEBSITE VALENTINO YUDHA</h2></td>
-      <td><img src="Images/WhatsApp Image 2025-09-30 at 12.41.43.jpeg" width="70px"></td>
+      <td><img src="images/WhatsApp Image 2025-09-30 at 12.41.43.jpeg" width="70px"></td>
     </tr>
     <tr align="center">
       <td><a href="index.html"><img src="images/vecteezy_home-icon-isolated-on-transparent-background-black-symbol_14391893.png" width="25px"><br>Beranda</a></td>
@@ -45,11 +45,11 @@
           </td>
           <td><a href="https://www.instagram.com/valentino_ypa/?igsh=MW84Y21ybzFzdTEycw%3D%3D#" target="_blank"><img src="images/vecteezy_instagram-logo-png-instagram-icon-transparent_18930415.png" width="100px"></a><br>
             <a href="https://www.tiktok.com/@valentino.0_0?_t=ZS-909JXGGzvYP&_r=1" target="_blank"><img src="images/vecteezy_tiktok-png-icon_16716485.png" width="60px"></a><br><br>
-            <a href="https://www.youtube.com/@valentino_gg2022" target="_blank"><img src="Images/vecteezy_youtube-png-icon_16716475.png" width="60px"></a>
+            <a href="https://www.youtube.com/@valentino_gg2022" target="_blank"><img src="images/vecteezy_youtube-png-icon_16716475.png" width="60px"></a>
             </td>
     </tr>
     <tr>
-        <td align="center" valign="middle"><a href="Album.html"><img src="Images/pngwing.com_-_Copy-removebg-preview.png" width="43px"></a></td>
+        <td align="center" valign="middle"><a href="Album.html"><img src="images/pngwing.com_-_Copy-removebg-preview.png" width="43px"></a></td>
       <td colspan="3"><marquee behavior="scroll" direction="left" scrollamount="6">
           <img src="images/gambar-orang-melambai-removebg-preview.png" width="30px" valign="bottom"> Halo! Ini adalah Halaman Artikelku (valentino-xsija2).
 </marquee></td>
@@ -58,4 +58,5 @@
   </table>
   </center>
 </body>
+
 </html>
