--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <tr align="center">
         <td><img src="images/logobaru-removebg-preview.png" width="70px"></td>
         <td colspan="3"><h2>SELAMAT DATANG DI WEBSITE VALENTINO YUDHA</h2></td>
-        <td><img src="Images/WhatsApp Image 2025-09-30 at 12.41.43.jpeg" width="70px"></td>
+        <td><img src="images/WhatsApp Image 2025-09-30 at 12.41.43.jpeg" width="70px"></td>
       </tr>
       <tr align="center">
         <td><a href="index.html"><img src="images/vecteezy_home-icon-isolated-on-transparent-background-black-symbol_14391893.png" width="25px"><br>Beranda</a></td>
@@ -22,11 +22,11 @@
         <td colspan="4" valign="top"><font face="Roboto"><br><br><font face="Lucida Bright"><h1>HALO INI ADALAH WEB PERTAMA SAYA</h1></font>Selamat datang di web pertamaku, nama saya Valentino Yudha Putra Anggara<br> dan dihalaman ini kalian bisa mengakses serta mengetahui berbagai hal tentangku.</font>
         <font face="Roboto"><p>Web ini saya buat pada 30 September 2025. Web ini dibuat hanya menggunakan html.<br> Untuk informasi yang lebih lengkap bisa klik tombol-tombol di atas.<br>
         </p></font>
-        <br><img src="Images/WhatsApp Image 2025-09-30 at 13.15.47.jpeg" width="300px">
+        <br><img src="images/WhatsApp Image 2025-09-30 at 13.15.47.jpeg" width="300px">
         </td>
         <td><a href="https://www.instagram.com/valentino_ypa/?igsh=MW84Y21ybzFzdTEycw%3D%3D#" target="_blank"><img src="images/vecteezy_instagram-logo-png-instagram-icon-transparent_18930415.png" width="100px"></a><br>
         <a href="https://www.tiktok.com/@valentino.0_0?_t=ZS-909JXGGzvYP&_r=1" target="_blank"><img src="images/vecteezy_tiktok-png-icon_16716485.png" width="60px"></a><br><br>
-        <a href="https://www.youtube.com/@valentino_gg2022" target="_blank"><img src="Images/vecteezy_youtube-png-icon_16716475.png" width="60px"></a>
+        <a href="https://www.youtube.com/@valentino_gg2022" target="_blank"><img src="images/vecteezy_youtube-png-icon_16716475.png" width="60px"></a>
         </td>
       </tr>
       <tr>
