--- a/Album.html
+++ b/Album.html
@@ -23,7 +23,7 @@
           <table border="0" width="100%">
             <tr>
               <td valign="top" align="center"><a href="keluarga.html"><h4>Keluarga</h4></a><br><img src="images/Keluarga Lengkap.jpeg" width="200px" height="245px"></td>
-              <td valign="top" align="center"><a href="Teman.html"><h4>Teman</h4></a><br><img src="images/Teman.jpeg" width="200px"></td>
+              <td valign="top" align="center"><a href="Teman.html"><h4>Teman</h4></a><br><img src="images/Teman.jpeg" width="200px" height="250px"></td>
             </tr>
             <tr>
               <td valign="top" align="center"><a href="kelas.html"><h4>Kelas</h4></a><img src="images/KELAS1.jpeg" width="200px"></td>
@@ -48,5 +48,6 @@
 </body>
 
 </html>
+
 
 
