--- a/kelas.html
+++ b/kelas.html
@@ -8,7 +8,7 @@
   <table border="1" width="90%" height="700px" bgcolor="#6495ED">
     <tr align="center">
       <td><img src="images/logobaru-removebg-preview.png" width="70px"></td>
-      <td colspan="3"><h2>SELAMAT DATANG DI WEBSITE VALENTINO YUDHA</h2></td>
+      <td colspan="3"><h2>PERSONAL WEB VALENTINO YUDHA</h2></td>
       <td><img src="images/WhatsApp Image 2025-09-30 at 12.41.43.jpeg" width="70px"></td>
     </tr>
     <tr align="center">
@@ -44,3 +44,4 @@
 </body>
 
 </html>
+
