--- a/Profil.html
+++ b/Profil.html
@@ -19,7 +19,7 @@
         <td><a href="bukutamu.html"><img src="images/pngwing.com (1).png" width="55px"><br>Buku Tamu</a></td>
       </tr>
       <tr align="center">
-            <td colspan="2"><img src="images/Dingin.jpeg" width="220px" height="340px"></td>
+            <td colspan="2"><img src="images/Dingin.png" width="220px" height="340px"></td>
             <td colspan="2" valign="top" align="left"><h4>Informasi Tentangku</h4>
               <font face="Georgia"><p><table border="1">
                 <tr>
@@ -109,6 +109,7 @@
   </body>
 
 </html>
+
 
 
 
