--- a/Album.html
+++ b/Album.html
@@ -22,7 +22,7 @@
           <td colspan="4" valign="top" align="center"><h4>Album</h4>
           <table border="0" width="100%">
             <tr>
-              <td valign="top" align="center"><a href="keluarga.html"><h4>Keluarga</h4></a><br><a href="images/Keluarga Lengkap.jpeg"><img src="images/Keluarga Lengkap.jpeg" width="200px" height="245px"></a></td>
+              <td valign="top" align="center"><a href="keluarga.html"><h4>Keluarga</h4></a><br><img src="images/Keluarga Lengkap.jpeg" width="200px" height="245px"></td>
               <td valign="top" align="center"><a href="Teman.html"><h4>Teman</h4></a><br><img src="images/Teman.jpeg" width="200px" height="250px"></td>
             </tr>
             <tr>
@@ -48,6 +48,7 @@
 </body>
 
 </html>
+
 
 
 
