--- a/keluarga.html
+++ b/keluarga.html
@@ -22,6 +22,7 @@
           <p> 
           <table border="0" align="left">
            <tr><img src="images/Keluarga Lengkap.jpeg" width="300px" height="280px"></tr>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
            <tr><img src="images/Saudara.jpeg" width="300px" height="280px"></tr>
           </table>
           </p> 
@@ -42,4 +43,5 @@
 </body>
 
 </html>
+
 
