--- a/kelas.html
+++ b/kelas.html
@@ -23,7 +23,9 @@
           <p> 
           <table border="0" align="left">
            <tr><img src="images/KELAS1.jpeg" width="300px"></tr>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
            <tr><img src="images/KELAS2.jpeg" width="300px"></tr>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
            <tr><img src="images/KELAS3.jpeg" width="300px"></tr>
           </table>
           </p> 
@@ -44,4 +46,5 @@
 </body>
 
 </html>
+
 
