--- a/Teman.html
+++ b/Teman.html
@@ -22,6 +22,7 @@
           <p> 
           <table border="0" align="left">
            <tr><img src="images/Teman.jpeg" width="300px" height="280px"></tr>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
            <tr><img src="images/PMMJK.jpeg" width="300px" height="280px"></tr>
           </table>
           </p> 
@@ -42,5 +43,6 @@
 </body>
 
 </html>
+
 
 
