--- a/keluarga.html
+++ b/keluarga.html
@@ -21,9 +21,9 @@
           <td colspan="4" valign="top" align="center"><h4>Keluarga</h4>
           <p> 
           <table border="0" align="left">
-           <tr><img src="images/Keluarga Lengkap.jpeg" width="300px" height="280px"></tr>
+           <tr><a href="images/Keluarga Lengkap.jpeg"><img src="images/Keluarga Lengkap.jpeg" width="300px" height="280px"></a></tr>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-           <tr><img src="images/Saudara.jpeg" width="300px" height="280px"></tr>
+           <tr><a href="images/Saudara.jpeg"><img src="images/Saudara.jpeg" width="300px" height="280px"></a></tr>
           </table>
           </p> 
           </td>
@@ -43,5 +43,6 @@
 </body>
 
 </html>
+
 
 
