--- a/kucing.html
+++ b/kucing.html
@@ -21,10 +21,10 @@
           <td colspan="4" valign="top" align="center"><h4>Kelas</h4>
           <p> 
           <table border="0" align="left">
-           <tr><img src="images/KUCING1.jpeg" width="300px"></tr><br>
-           <tr><img src="images/KUCING2.jpeg" width="300px" height="230px"></tr>
+           <tr><a href="images/KUCING1.jpeg" target="_blank"><img src="images/KUCING1.jpeg" width="300px"></a></tr><br>
+           <tr><a href="images/KUCING2.jpeg" target="_blank"><img src="images/KUCING2.jpeg" width="300px" height="230px"></a></tr>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-           <tr><img src="images/WhatsApp Image 2025-09-30 at 13.15.47.jpeg" width="300px" height="230px"></tr>
+           <tr><a href="images/WhatsApp Image 2025-09-30 at 13.15.47.jpeg" target="_blank"><img src="images/WhatsApp Image 2025-09-30 at 13.15.47.jpeg" width="300px" height="230px"></a></tr>
           </table>
           </p> 
           </td>
@@ -44,6 +44,7 @@
 </body>
 
 </html>
+
 
 
 
