--- a/Album.html
+++ b/Album.html
@@ -22,12 +22,12 @@
           <td colspan="4" valign="top" align="center"><h4>Album</h4>
           <table border="0" width="100%">
             <tr>
-              <td valign="top" align="center"><a href="keluarga.html"><h4>Keluarga</h4></a><br><a href="images/Keluarga Lengkap.jpeg" target="_blank"><img src="images/Keluarga Lengkap.jpeg" width="200px" height="245px"></a></td>
-              <td valign="top" align="center"><a href="Teman.html"><h4>Teman</h4></a><br><a href="images/Teman.jpeg" target="_blank"><img src="images/Teman.jpeg" width="200px" height="250px"></a></td>
+              <td valign="top" align="center"><a href="keluarga.html"><h4>Keluarga</h4></a><br><a href="images/Keluarga Lengkap.jpeg"><img src="images/Keluarga Lengkap.jpeg" width="200px" height="245px"></a></td>
+              <td valign="top" align="center"><a href="Teman.html"><h4>Teman</h4></a><br><a href="images/Teman.jpeg"><img src="images/Teman.jpeg" width="200px" height="250px"></a></td>
             </tr>
             <tr>
-              <td valign="top" align="center"><a href="kelas.html"><h4>Kelas</h4></a><a href="images/KELAS1.jpeg" target="_blank"><img src="images/KELAS1.jpeg" width="200px"></a></td>
-              <td valign="top" align="center"><a href="kucing.html"><h4>Kucing</h4></a><a href="images/WhatsApp Image 2025-09-30 at 13.15.47.jpeg" target="_blank"><img src="images/WhatsApp Image 2025-09-30 at 13.15.47.jpeg" width="200px" height="200px"></a></td>
+              <td valign="top" align="center"><a href="kelas.html"><h4>Kelas</h4></a><a href="images/KELAS1.jpeg"><img src="images/KELAS1.jpeg" width="200px"></a></td>
+              <td valign="top" align="center"><a href="kucing.html"><h4>Kucing</h4></a><a href="images/WhatsApp Image 2025-09-30 at 13.15.47.jpeg"><img src="images/WhatsApp Image 2025-09-30 at 13.15.47.jpeg" width="200px" height="200px"></a></td>
             </tr>
           </table>
           </td>
@@ -46,8 +46,8 @@
   </table>
   </center>
 </body>
-
 </html>
+
 
 
 
