--- a/Teman.html
+++ b/Teman.html
@@ -21,9 +21,9 @@
           <td colspan="4" valign="top" align="center"><h4>Teman</h4>
           <p> 
           <table border="0" align="left">
-           <tr><a href="images/Teman.jpeg" target="_blank"><img src="images/Teman.jpeg" width="300px" height="280px"></a></tr>
+           <tr><a href="images/Teman.jpeg"><img src="images/Teman.jpeg" width="300px" height="280px"></a></tr>
            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-           <tr><a href="images/Saudara.jpeg" target="_blank"><img src="images/PMMJK.jpeg" width="300px" height="280px"></a></tr>
+           <tr><a href="images/Saudara.jpeg"><img src="images/PMMJK.jpeg" width="300px" height="280px"></a></tr>
           </table>
           </p> 
           </td>
@@ -43,6 +43,7 @@
 </body>
 
 </html>
+
 
 
 
