--- a/kelas.html
+++ b/kelas.html
@@ -22,11 +22,11 @@
           <td colspan="4" valign="top" align="center"><h4>Kelas</h4>
           <p> 
           <table border="0" align="left">
-           <tr><a href="images/KELAS1.jpeg" target="_blank"><img src="images/KELAS1.jpeg" width="300px"></a></tr>
+           <tr><a href="images/KELAS1.jpeg"><img src="images/KELAS1.jpeg" width="300px"></a></tr>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-           <tr><a href="images/KELAS2.jpeg" target="_blank"><img src="images/KELAS2.jpeg" width="300px"></a></tr>
+           <tr><a href="images/KELAS2.jpeg"><img src="images/KELAS2.jpeg" width="300px"></a></tr>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-           <tr><a href="images/KELAS3.jpeg" target="_blank"><img src="images/KELAS3.jpeg" width="300px"></a></tr>
+           <tr><a href="images/KELAS3.jpeg"><img src="images/KELAS3.jpeg" width="300px"></a></tr>
           </table>
           </p> 
           </td>
@@ -46,6 +46,7 @@
 </body>
 
 </html>
+
 
 
 
