--- a/Album.html
+++ b/Album.html
@@ -11,7 +11,7 @@
       <td colspan="3"><h2>PERSONAL WEB VALENTINO YUDHA</h2></td>
       <td><img src="images/WhatsApp Image 2025-09-30 at 12.41.43.jpeg" width="70px"></td>
     </tr>
-    <tr align="center">
+    <tr align="center" bgcolor="6CCEF5">
       <td><a href="index.html"><img src="images/vecteezy_home-icon-isolated-on-transparent-background-black-symbol_14391893.png" width="25px"><br>Beranda</a></td>
       <td><a href="Profil.html"><img src="images/vecteezy_user-profile-icon-profile-avatar-user-icon-male-icon_20911737.png" width="20px"><br>Profil</a></td>
       <td><a href="Album.html"><img src="images/vecteezy_jpeg-logo-with-a-mountain-in-the-background_57745777-removebg-preview.png" width="20px"><br>Album</a></td>
@@ -19,7 +19,7 @@
       <td><a href="bukutamu.html"><img src="images/pngwing.com (1).png" width="55px"><br>Buku Tamu</a></td>
     </tr>
     <tr align="center">
-          <td colspan="4" valign="top" align="center"><h4>Album</h4>
+          <td colspan="4" valign="top" align="center"><h2>Album</h2>
           <table border="0" width="100%">
             <tr>
               <td valign="top" align="center"><a href="keluarga.html"><h4>Keluarga</h4></a><br><a href="images/Keluarga Lengkap.jpeg"><img src="images/Keluarga Lengkap.jpeg" width="200px" height="245px"></a></td>
@@ -47,6 +47,7 @@
   </center>
 </body>
 </html>
+
 
 
 
