--- a/membacanovel.html
+++ b/membacanovel.html
@@ -11,7 +11,7 @@
       <td colspan="3"><h2>PERSONAL WEB VALENTINO YUDHA</h2></td>
       <td><img src="images/WhatsApp Image 2025-09-30 at 12.41.43.jpeg" width="70px"></td>
     </tr>
-    <tr align="center">
+    <tr align="center" bgcolor="6CCEF5">
       <td><a href="index.html"><img src="images/vecteezy_home-icon-isolated-on-transparent-background-black-symbol_14391893.png" width="25px"><br>Beranda</a></td>
         <td><a href="Profil.html"><img src="images/vecteezy_user-profile-icon-profile-avatar-user-icon-male-icon_20911737.png" width="20px"><br>Profil</a></td>
         <td><a href="Album.html"><img src="images/vecteezy_jpeg-logo-with-a-mountain-in-the-background_57745777-removebg-preview.png" width="20px"><br>Album</a></td>
@@ -62,4 +62,5 @@
 </body>
 
 </html>
+
 
