--- a/olahraga.html
+++ b/olahraga.html
@@ -25,12 +25,12 @@
             <tr>
               <td><h5>Sepak Bola</h5>
               <img src="images/SEPAKBOLA.jpeg" width="140px"></td>
-              <td valign="bottom">Sepak bola adalah olahraga tim paling populer di dunia yang dimainkan oleh dua tim beranggotakan masing-masing sebelas orang dengan tujuan memasukkan bola ke gawang lawan sebanyak mungkin. Permainan ini berlangsung dalam dua babak, masing-masing 45 menit, dan dipimpin oleh seorang wasit serta asisten wasit untuk mengawasi jalannya pertandingan. Sepak bola tidak hanya mengandalkan kekuatan fisik, tetapi juga strategi, kerja sama tim, dan keterampilan individu seperti dribbling, passing, dan shooting. Popularitasnya yang mendunia membuat sepak bola sering disebut sebagai "olahraga nomor satu" dan menjadi sarana pemersatu banyak bangsa.</td>
+              <td valign="middle">Sepak bola adalah olahraga tim paling populer di dunia yang dimainkan oleh dua tim beranggotakan masing-masing sebelas orang dengan tujuan memasukkan bola ke gawang lawan sebanyak mungkin. Permainan ini berlangsung dalam dua babak, masing-masing 45 menit, dan dipimpin oleh seorang wasit serta asisten wasit untuk mengawasi jalannya pertandingan. Sepak bola tidak hanya mengandalkan kekuatan fisik, tetapi juga strategi, kerja sama tim, dan keterampilan individu seperti dribbling, passing, dan shooting. Popularitasnya yang mendunia membuat sepak bola sering disebut sebagai "olahraga nomor satu" dan menjadi sarana pemersatu banyak bangsa.</td>
             </tr>
             <tr>
                 <td><h5>Bulu Tangkis</h5>
                   <img src="images/BULUTANGKIS.jpg" width="140px"></td>
-                  <td valign="bottom">Bulu tangkis adalah olahraga raket yang dimainkan oleh dua orang (tunggal) atau dua pasangan (ganda) dengan tujuan memukul shuttlecock melewati net agar jatuh di area lawan. Permainan ini membutuhkan kecepatan, kelincahan, dan refleks yang baik karena shuttlecock bisa melesat sangat cepat. Setiap pertandingan biasanya dimainkan dalam sistem best of three dengan 21 poin per set. Bulu tangkis menjadi salah satu olahraga populer di dunia, khususnya di Asia, dan sering membanggakan Indonesia melalui prestasi atlet-atletnya di ajang internasional.</td> 
+                  <td valign="middle">Bulu tangkis adalah olahraga raket yang dimainkan oleh dua orang (tunggal) atau dua pasangan (ganda) dengan tujuan memukul shuttlecock melewati net agar jatuh di area lawan. Permainan ini membutuhkan kecepatan, kelincahan, dan refleks yang baik karena shuttlecock bisa melesat sangat cepat. Setiap pertandingan biasanya dimainkan dalam sistem best of three dengan 21 poin per set. Bulu tangkis menjadi salah satu olahraga populer di dunia, khususnya di Asia, dan sering membanggakan Indonesia melalui prestasi atlet-atletnya di ajang internasional.</td> 
             </tr>
           </table>
           </p> 
@@ -51,5 +51,6 @@
 </body>
 
 </html>
+
 
 
